@@ -7,6 +7,7 @@
 			<directory>extensions</directory>
 			<directory>menus</directory>
 			<directory>users</directory>
+			<directory>components</directory>
 		</testsuite>
 	</testsuites>
 	<logging>
