@@ -28,6 +28,7 @@ $ -> Language fix or change
 
 2-May-2013 Mark Dexter
  # Fix up doc blocks as example for Webdriver page classes and tests.
+ # Added test for Tag Manager. Thanks Puneet Kala.
 
 30-Apr-2013 Mark Dexter
  # Fix system tests for clearfix class in front end
